@@ -144,7 +144,7 @@
 		  (set-x-property 'root '_NET_DESKTOP_VIEWPORT
 				  view 'CARDINAL 32)
 		(aset view (* i 2) (* (car port) (screen-width)))
-		(aset view (1+ (* i 2)) (* (cdr port) (screen-width)))
+		(aset view (1+ (* i 2)) (* (cdr port) (screen-height)))
 		(loop (1+ i)))))))
 
       (define (set-window-hints w)
