@@ -306,9 +306,11 @@
 	(if (or (not viewport) (window-get w 'sticky-viewport))
 	    (move-window-to w (car position) (cdr position))
 	  (move-window-to w (+ (* (car viewport) (screen-width))
-			       (car position))
+			       (car position)
+			       (- viewport-x-offset))
 			  (+ (* (cdr viewport) (screen-height))
-			     (cdr position)))
+			     (cdr position)
+			     (- viewport-y-offset)))
 	  (when (window-outside-workspace-p w)
 	    (move-window-to-current-viewport w)))
 	(window-put w 'placed t))))
